--- a/templates/index.html
+++ b/templates/index.html
@@ -56,7 +56,7 @@
       </header>
       <div class="sell-button-container">
         <div id="g_id_signin" class="g_id_signin" style="background-color:green;" >Post Listing Test</div>
-        <a href="/sellers">
+        <a href="/listings">
           <button type="button" class="sell-button" id="postListingsButton">Post Listing</button>
         </a>
       </div>
