--- a/templates/listings.html
+++ b/templates/listings.html
@@ -33,7 +33,7 @@
       <p id="output"></p>
       <div class="top">
         <div class="top-left">
-          <a href="/market">&lt; Swipe Market</a>
+          <a href="/">&lt; Swipe Market</a>
         </div>
         <div class="top-right">
           <div id="current-time"></div>
@@ -53,7 +53,7 @@
         <a href="/sellers">Post Listings</a> 
       </header>
       <div class="back-button-container">
-        <a href="/market">
+        <a href="/">
           <button type="button" class="sell-button">Back to Swipe Market</button>
         </a>
       </div>
@@ -127,21 +127,15 @@
                     <option value="Other">Other</option>
                 </select>
             </div>
-            <div>
-                <label for="name">Your Name:</label>
-                <input type="text" id="name" name="name" required>    
-            </div>
-            <div>
-                <label for="email">Your Email:</label>
-                <input type="email" id="email" name="email" required>    
-            </div>
+            <input type="hidden" name="poster_name" id="poster_name" value="">
+            <input type="hidden" name="poster_email" id="poster_email" value="">
             <div>
                 <label for="phone_number">Your Phone Number:</label>
                 <input type="text" id="phone_number" name="phone_number" placeholder="Optional">    
             </div>
             <div>
                 <button type="submit" class="sell-button" formaction="/submit_seller">Sell</button>
-                <button type="submit" class="buy-button" formaction="submit_buyer">Buy</button>
+                <button type="submit" class="buy-button" formaction="/submit_buyer">Buy</button>
             </div>
         </form>
         </div>
@@ -150,5 +144,23 @@
     </main>
     <script src="https://cdn.jsdelivr.net/npm/jwt-decode@3.1.2/build/jwt-decode.min.js"></script>
     <script src="../static/functions.js" type="text/javascript"></script>
+    <script>
+      document.addEventListener('DOMContentLoaded', function() {
+        const userName = localStorage.getItem('userName');
+        const userEmail = localStorage.getItem('userEmail');
+        
+        if (userName && userEmail) {
+          const posterNameField = document.getElementById('poster_name');
+          const posterEmailField = document.getElementById('poster_email');
+          
+          if (posterNameField) {
+            posterNameField.value = userName;
+          }
+          if (posterEmailField) {
+            posterEmailField.value = userEmail;
+          }
+        }
+      });
+    </script>
   </body>
 </html>
