--- a/templates/index.html
+++ b/templates/index.html
@@ -145,5 +145,17 @@
     </main>
     <script src="https://cdn.jsdelivr.net/npm/jwt-decode@3.1.2/build/jwt-decode.min.js"></script>
     <script src="../static/functions.js" type="text/javascript"></script>
+    <div id="popup" class="form-popup">
+        <div class="form-container">
+            <p id="popup-message">Connection email sent! Check your inbox</p>
+        </div>
+    </div>
+    <script>
+        // Check URL parameters when page loads
+        if (new URLSearchParams(window.location.search).get('show_popup') === 'true') {
+            const popup = document.getElementById('popup');
+            popup.style.display = 'block';
+        }
+    </script>
   </body>
 </html>
