--- a/static/swipemarket.css
+++ b/static/swipemarket.css
@@ -243,5 +243,24 @@
     display: block;
   }
   
+  .listing-actions {
+    display: none;  /* Hidden by default */
+    margin-top: 10px;
+  }
+  
+  .edit-button, .delete-button {
+    font-size: 1rem;
+    padding: 5px 10px;
+    margin: 0 5px;
+  }
+  
+  .delete-button {
+    background-color: #ff4444;
+  }
+  
+  .edit-button {
+    background-color: #44b;
+  }
+  
   
   
