--- a/templates/index.html
+++ b/templates/index.html
@@ -88,7 +88,6 @@
                     <button onclick="deleteListing('{{ listing.id }}')" class="delete-button">Delete</button>
                     <!--<button onclick="editListing('{{ listing.id }}')" class="edit-button">Edit</button>-->
                 </div>
-                <button type="button" class="contact-button" data-listing-id="{{ listing.id }}" onclick="openForm(this)" style="display: none;">Contact</button>
             </td>
           </tr>
           {% else %}
@@ -119,11 +118,10 @@
             <td>{{ listing.price }}</td>
             <td>{{ listing.payment_methods }}</td>
             <td>
+              <button type="button" class="contact-button" data-listing-id="{{ listing.id }}" onclick="openForm(this)">Contact</button>
               <div class="listing-actions" data-owner-email="{{ listing.buyer_email }}">
                   <button onclick="deleteListing('{{ listing.id }}')" class="delete-button">Delete</button>
-                  <!--<button onclick="editListing('{{ listing.id }}')" class="edit-button">Edit</button>-->
               </div>
-              <button type="button" class="contact-button" data-listing-id="{{ listing.id }}" onclick="openForm(this)" style="display: none;">Contact</button>
             </td>
           </tr>
           {% else %}
