changed broken title links

--- a/templates/index.html
+++ b/templates/index.html
@@ -52,7 +52,7 @@
         </div>
       </div>
       <header class="header" id="index-header">
-        <a href="/market">Swipe Market &#128722;</a> 
+        <a href="/">Swipe Market &#128722;</a> 
       </header>
       <div class="sell-button-container">
         <div id="g_id_signin" class="g_id_signin" style="background-color:green;" >Post Listing Test</div>
