--- a/templates/listings.html
+++ b/templates/listings.html
@@ -50,7 +50,7 @@
         </div>
       </div>
       <header class="header" id="index-header">
-        <a href="/sellers">Post Listings</a> 
+        <a href="/listings">Post Listings</a> 
       </header>
       <div class="back-button-container">
         <a href="/">
