illegal behavior corrected

--- a/templates/edit_listing.html
+++ b/templates/edit_listing.html
@@ -57,7 +57,7 @@
                     </div>
                     <div>
                         <label for="start_time">Start:</label>
-                        <input type="time" id="edit_start_time" name="edit_start_time" value="{{ listing.start_time }}" required>
+                        <input type="time" id="start_time" name="start_time" value="{{ listing.start_time }}" required>
                     </div>
                     <div>
                         <label for="end_time">End:</label>
