--- a/templates/index.html
+++ b/templates/index.html
@@ -46,6 +46,7 @@
           <div id="profile-menu" class="profile-menu" style="display: none;">
             <img id="profile-icon" src="" alt="Profile" />
             <div id="profile-dropdown" class="profile-dropdown">
+              <a href="/profile"><button>Profile</button></a>
               <button onclick="handleSignOut()">Sign Out</button>
             </div>
           </div>
