--- a/templates/profile.html
+++ b/templates/profile.html
@@ -128,12 +128,12 @@
         
         <div class="profile-form">
           <div>
-            <label for="name">Full Name</label>
-            <input type="text" id="name" name="name" placeholder="Your name" readonly>
-          </div>
-          <div>
             <label for="email">Email</label>
             <input type="email" id="email" name="email" placeholder="Your email" readonly>
+          </div>
+          <div>
+            <label for="name">Name</label>
+            <input type="text" id="name" name="name" placeholder="Your name" readonly>
           </div>
           <div>
             <label for="phone">Phone Number</label>
