--- a/templates/index.html
+++ b/templates/index.html
@@ -81,7 +81,7 @@
             <td>{{ listing.dining_hall }}</td>
             <td>{{ listing.date }}</td>
             <td>{{ listing.start_time }} - {{ listing.end_time }}</td>
-            <td>{{ listing.price }}</td>
+            <td>${{ "%.2f"|format(listing.price if listing.price is not none else 0) }}</td>
             <td>{{ listing.payment_methods }}</td>
             <td>
               <button type="button" class="contact-button" 
@@ -120,7 +120,7 @@
             <td>{{ listing.dining_hall }}</td>
             <td>{{ listing.date }}</td>
             <td>{{ listing.start_time }} - {{ listing.end_time }}</td>
-            <td>{{ listing.price }}</td>
+            <td>${{ "%.2f"|format(listing.price if listing.price is not none else 0) }}</td>
             <td>{{ listing.payment_methods }}</td>
             <td>
               <button type="button" class="contact-button" 
