hewitt not hewitt dining

--- a/templates/listings.html
+++ b/templates/listings.html
@@ -95,7 +95,7 @@
                     <option value="Grace Dodge">Grace Dodge</option>
                     <option value="Fac Shack">Fac Shack</option>
                     <option value="Johnny's">Johnny's</option>
-                    <option value="Hewitt">Hewitt Dining</option>
+                    <option value="Hewitt">Hewitt</option>
                     <option value="Diana">Diana</option>
                 </select>
             </div>
