--- a/templates/profile.html
+++ b/templates/profile.html
@@ -132,7 +132,7 @@
             <input type="email" id="email" name="email" placeholder="Your email" readonly>
           </div>
           <div>
-            <label for="name">Name</label>
+            <label for="name">Preferred Name</label>
             <input type="text" id="name" name="name" placeholder="Your name">
           </div>
           <div>
