--- a/templates/listings.html
+++ b/templates/listings.html
@@ -28,6 +28,15 @@
       gtag('config', 'G-D26R1LF247');
     </script>
   </head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-V549ZYC27J"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-V549ZYC27J');
+  </script>
   <body>
     <main>
       <p id="output"></p>
