--- a/templates/profile.html
+++ b/templates/profile.html
@@ -94,6 +94,15 @@
       }
     </style>
   </head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-V549ZYC27J"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-V549ZYC27J');
+  </script>
   <body>
     <main>
       <div class="top">
