--- a/templates/listings.html
+++ b/templates/listings.html
@@ -214,7 +214,7 @@
             
             <div class="form-group">
               <label for="price">Price in dollars:</label>
-              <input type="number" id="price" name="price" step="0.01" placeholder="Enter price" required>
+              <input type="number" id="price" name="price" min="0" step="0.01" placeholder="Enter price" required>
             </div>
             
             <div class="form-group">
